--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,9 +2,9 @@
     <!-- Base application theme. -->
     <style name="Theme.News" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryDark">@color/purple_700</item>
-        <item name="colorAccent">@color/teal_200</item>
+        <item name="colorPrimary">@color/color_FF6200EE</item>
+        <item name="colorPrimaryDark">@color/color_FF3700B3</item>
+        <item name="colorAccent">@color/color_FFBB86FC</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
