--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="color_FFBB86FC">#FFBB86FC</color>
+    <color name="color_FF6200EE">#FF6200EE</color>
+    <color name="color_FF3700B3">#FF3700B3</color>
+    <color name="color_FF03DAC5">#FF03DAC5</color>
+    <color name="color_FF018786">#FF018786</color>
+    <color name="color_4A78C9">#4A78C9</color>
 </resources>
