--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="color_FF03DAC5">#FF03DAC5</color>
     <color name="color_FF018786">#FF018786</color>
     <color name="color_4A78C9">#4A78C9</color>
+    <color name="color_E6E6E6">#E6E6E6</color>
 </resources>
