--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+ <dimen name="dp_4">4dp</dimen>
+ <dimen name="dp_6">6dp</dimen>
+ <dimen name="dp_10">10dp</dimen>
+ <dimen name="dp_30">30dp</dimen>
  <dimen name="dp_50">50dp</dimen>
+ <dimen name="dp_120">120dp</dimen>
+ <dimen name="dp_280">280dp</dimen>
+
+ <dimen name="sp_20">20sp</dimen>
+ <dimen name="sp_24">24sp</dimen>
 </resources>
