--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
  <dimen name="dp_120">120dp</dimen>
  <dimen name="dp_280">280dp</dimen>
 
+ <dimen name="sp_12">12sp</dimen>
  <dimen name="sp_20">20sp</dimen>
  <dimen name="sp_24">24sp</dimen>
 </resources>
