--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
  <dimen name="dp_280">280dp</dimen>
 
  <dimen name="sp_12">12sp</dimen>
+ <dimen name="sp_16">16sp</dimen>
  <dimen name="sp_20">20sp</dimen>
  <dimen name="sp_24">24sp</dimen>
 </resources>
