--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
  <dimen name="dp_6">6dp</dimen>
  <dimen name="dp_10">10dp</dimen>
  <dimen name="dp_30">30dp</dimen>
+ <dimen name="dp_40">40dp</dimen>
  <dimen name="dp_50">50dp</dimen>
  <dimen name="dp_120">120dp</dimen>
  <dimen name="dp_280">280dp</dimen>
